@@ -6,6 +6,9 @@ import cn.howxu.mmcr.api.machine.NetworkInterfaceSpec;
 import cn.howxu.mmcr.api.machine.RecipeFailureActions;
 import cn.howxu.mmcr.api.network.RequestFailed;
 import cn.howxu.mmcr.api.network.RequestProcess;
+import java.util.LinkedHashMap;
+import java.util.Map;
+import java.util.Objects;
 import net.minecraft.resources.Identifier;
 
 import java.util.Collections;
@@ -34,28 +37,28 @@ public record MachineDefinition(
         boolean allowMultithreading,
         int maxParallelAmount,
         boolean expandableStructure,
-        java.util.Map<String, SmartInterfaceType> smartInterfaceTypes,
+        Map<String, SmartInterfaceType> smartInterfaceTypes,
         boolean shareSmartInterfaces,
         List<SmartInterfaceModifier> smartInterfaceModifiers,
         Identifier runningSoundId,
         Identifier finishSoundId,
         BlockArray pattern,
         MachineBehavior behavior,
-        java.util.Map<Identifier, RequestProcess> requestProcessors,
-        java.util.Map<Identifier, RequestFailed> requestFailures) {
+        Map<Identifier, RequestProcess> requestProcessors,
+        Map<Identifier, RequestFailed> requestFailures) {
 
     public MachineDefinition(Identifier id, String displayNameKey, ControllerSpec controller,
             AppearanceSpec appearance, FactorySpec factory, MachineRole role, Set<Identifier> acceptedModuleIds,
             NetworkInterfaceSpec networkInterface, long maxParallelism, boolean parallelizable,
             RecipeFailureActions failureAction, boolean allowModifiers, boolean allowMultithreading,
             int maxParallelAmount, boolean expandableStructure,
-            java.util.Map<String, SmartInterfaceType> smartInterfaceTypes, boolean shareSmartInterfaces,
+            Map<String, SmartInterfaceType> smartInterfaceTypes, boolean shareSmartInterfaces,
             List<SmartInterfaceModifier> smartInterfaceModifiers, Identifier runningSoundId, Identifier finishSoundId,
             BlockArray pattern, MachineBehavior behavior) {
         this(id, displayNameKey, controller, appearance, factory, role, acceptedModuleIds, networkInterface,
                 maxParallelism, parallelizable, failureAction, allowModifiers, allowMultithreading, maxParallelAmount,
                 expandableStructure, smartInterfaceTypes, shareSmartInterfaces, smartInterfaceModifiers, runningSoundId,
-                finishSoundId, pattern, behavior, java.util.Map.of(), java.util.Map.of());
+                finishSoundId, pattern, behavior, Map.of(), Map.of());
     }
 
     public MachineDefinition(Identifier id, String displayNameKey, ControllerSpec controller,
@@ -64,7 +67,7 @@ public record MachineDefinition(
             RecipeFailureActions failureAction) {
         this(id, displayNameKey, controller, appearance, factory, role, acceptedModuleIds,
                 maxParallelism, parallelizable, failureAction, false, false, 1, false,
-                java.util.Map.of(), false, List.of(), null, null, new BlockArray(java.util.Map.of()),
+                Map.of(), false, List.of(), null, null, new BlockArray(Map.of()),
                 RecipeBehavior.defaults());
     }
 
@@ -73,7 +76,7 @@ public record MachineDefinition(
             Set<Identifier> acceptedModuleIds, long maxParallelism, boolean parallelizable,
             RecipeFailureActions failureAction, boolean allowModifiers, boolean allowMultithreading,
             int maxParallelAmount, boolean expandableStructure,
-            java.util.Map<String, SmartInterfaceType> smartInterfaceTypes,
+            Map<String, SmartInterfaceType> smartInterfaceTypes,
             boolean shareSmartInterfaces, List<SmartInterfaceModifier> smartInterfaceModifiers,
             Identifier runningSoundId, Identifier finishSoundId, BlockArray pattern,
             MachineBehavior behavior) {
@@ -89,7 +92,7 @@ public record MachineDefinition(
             Set<Identifier> acceptedModuleIds, long maxParallelism, boolean parallelizable,
             RecipeFailureActions failureAction, boolean allowModifiers, boolean allowMultithreading,
             int maxParallelAmount, boolean expandableStructure,
-            java.util.Map<String, SmartInterfaceType> smartInterfaceTypes,
+            Map<String, SmartInterfaceType> smartInterfaceTypes,
             boolean shareSmartInterfaces, List<SmartInterfaceModifier> smartInterfaceModifiers,
             Identifier runningSoundId, Identifier finishSoundId, BlockArray pattern) {
         this(id, displayNameKey, controller, appearance, factory, role, acceptedModuleIds,
@@ -112,14 +115,14 @@ public record MachineDefinition(
         networkInterface = networkInterface == null ? NetworkInterfaceSpec.disabled() : networkInterface;
         if (maxParallelism < 1L) throw new IllegalArgumentException("maxParallelism must be positive");
         if (maxParallelAmount < 1) throw new IllegalArgumentException("maxParallelAmount must be positive");
-        smartInterfaceTypes = java.util.Map.copyOf(smartInterfaceTypes == null ? java.util.Map.of() : smartInterfaceTypes);
+        smartInterfaceTypes = Map.copyOf(smartInterfaceTypes == null ? Map.of() : smartInterfaceTypes);
         smartInterfaceModifiers = List.copyOf(smartInterfaceModifiers == null ? List.of() : smartInterfaceModifiers);
         failureAction = failureAction == null ? RecipeFailureActions.getDefaultAction() : failureAction;
-        behavior = java.util.Objects.requireNonNull(behavior, "behavior");
-        requestProcessors = java.util.Collections.unmodifiableMap(new java.util.LinkedHashMap<>(
-                requestProcessors == null ? java.util.Map.of() : requestProcessors));
-        requestFailures = java.util.Collections.unmodifiableMap(new java.util.LinkedHashMap<>(
-                requestFailures == null ? java.util.Map.of() : requestFailures));
+        behavior = Objects.requireNonNull(behavior, "behavior");
+        requestProcessors = Collections.unmodifiableMap(new LinkedHashMap<>(
+                requestProcessors == null ? Map.of() : requestProcessors));
+        requestFailures = Collections.unmodifiableMap(new LinkedHashMap<>(
+                requestFailures == null ? Map.of() : requestFailures));
         if (role != MachineRole.HOST && !acceptedModuleIds.isEmpty()) {
             throw new IllegalStateException("Only HOST machines may accept modules");
         }
